--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-name: Insert Title
+name: Sketchy Bits
 markdown: redcarpet
+description: Code, rambles, and doodles
+url: http://rssteffey.github.io
