--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Sketchy Bits
 markdown: kramdown
 description: Code, rambles, and doodles
-url: http://rssteffey.com
+url: http://www.rssteffey.com
 permalink: /:year/:month/:title
