Functional Overlap and Game Design
Christmas post (and support for future-dated posts)

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ markdown: kramdown
 description: Code, rambles, and doodles
 url: http://www.rssteffey.com
 permalink: /:year/:month/:title
+future: true
